--- a/g_eflow_2pcgnn.ipynb
+++ b/g_eflow_2pcgnn.ipynb
@@ -58,21 +58,19 @@
     "    os.makedirs(root_dir)\n",
     "\n",
     "# argparser\n",
-    "use_parser = False\n",
+    "use_parser = True\n",
     "if use_parser:\n",
     "    parser = argparse.ArgumentParser(description='Determine the structure of the quantum model.')\n",
     "    parser.add_argument('--date_time', type=str, help='Date time in format Ymd_HMS')\n",
-    "    parser.add_argument('--model_class', type=str, help='Quantum gnn model class')\n",
     "    parser.add_argument('--q_gnn_layers', type=int, help='Quantum gnn layers')\n",
     "    parser.add_argument('--q_gnn_reupload', type=int, help='Quantum gnn reupload')\n",
     "    parser.add_argument('--rnd_seed', type=int, help='Random seed')\n",
     "    parse_args = parser.parse_args()\n",
     "else:\n",
-    "    parse_fields = [\"date_time\", \"model_class\", \"q_gnn_layers\", \"q_gnn_reupload\", \"rnd_seed\"]\n",
+    "    parse_fields = [\"date_time\", \"q_gnn_layers\", \"q_gnn_reupload\", \"rnd_seed\"]\n",
     "    parse_tuple  = namedtuple('parse_tuple', \" \".join(parse_fields))\n",
     "    parse_args   = parse_tuple(\n",
     "        date_time      = time.strftime(\"%Y%m%d_%H%M%S\", time.localtime()),\n",
-    "        model_class    = \"QuantumAngle2PCGNN\",\n",
     "        rnd_seed       = 0,\n",
     "        q_gnn_layers   = 1,\n",
     "        q_gnn_reupload = 0,\n",
@@ -89,17 +87,17 @@
     "# global settings\n",
     "cf = {}\n",
     "cf[\"time\"]     = parse_args.date_time\n",
-    "cf[\"wandb\"]    = False # <-----------------------------------------------\n",
+    "cf[\"wandb\"]    = True # <-----------------------------------------------\n",
     "cf[\"project\"]  = \"g_eflow_QFCGNN\"\n",
     "\n",
     "# training configuration\n",
     "cf[\"lr\"]                = 1E-2\n",
     "cf[\"rnd_seed\"]          = parse_args.rnd_seed\n",
     "cf[\"num_train_ratio\"]   = 0.8\n",
-    "cf[\"num_bin_data\"]      = 1 # <-----------------------------------------------\n",
+    "cf[\"num_bin_data\"]      = 500 # <-----------------------------------------------\n",
     "cf[\"batch_size\"]        = 64 # <-----------------------------------------------\n",
     "cf[\"num_workers\"]       = 0\n",
-    "cf[\"max_epochs\"]        = 1 # <-----------------------------------------------\n",
+    "cf[\"max_epochs\"]        = 10 # <-----------------------------------------------\n",
     "cf[\"accelerator\"]       = \"cpu\"\n",
     "cf[\"fast_dev_run\"]      = False\n",
     "cf[\"log_every_n_steps\"] = cf[\"batch_size\"] // 2"
@@ -378,7 +376,9 @@
     "    max(ak.count(sig_fatjet_events.events[\"fast_pt\"], axis=1)), \n",
     "    max(ak.count(bkg_fatjet_events.events[\"fast_pt\"], axis=1))))))\n",
     "preprocess_mode = \"normalize\"\n",
-    "model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":3, \"gnn_layers\":1, \"gnn_reupload\":0}\n",
+    "gnn_layers      = parse_args.q_gnn_layers\n",
+    "gnn_reupload    = parse_args.q_gnn_reupload\n",
+    "model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":5, \"gnn_layers\":1, \"gnn_reupload\":0}\n",
     "train_qfcgnn(preprocess_mode, model_dict)"
    ]
   }
