20230909 fix more than 3 data qubits in qnn

--- a/g_eflow_2pcgnn.ipynb
+++ b/g_eflow_2pcgnn.ipynb
@@ -58,7 +58,7 @@
     "    os.makedirs(root_dir)\n",
     "\n",
     "# argparser\n",
-    "use_parser = True\n",
+    "use_parser = False\n",
     "if use_parser:\n",
     "    parser = argparse.ArgumentParser(description='Determine the structure of the quantum model.')\n",
     "    parser.add_argument('--date_time', type=str, help='Date time in format Ymd_HMS')\n",
@@ -87,7 +87,7 @@
     "# global settings\n",
     "cf = {}\n",
     "cf[\"time\"]     = parse_args.date_time\n",
-    "cf[\"wandb\"]    = True # <-----------------------------------------------\n",
+    "cf[\"wandb\"]    = False # <-----------------------------------------------\n",
     "cf[\"project\"]  = \"g_eflow_QFCGNN\"\n",
     "\n",
     "# training configuration\n",
