20230911 fix gl gr bug

--- a/g_eflow_2pcgnn.ipynb
+++ b/g_eflow_2pcgnn.ipynb
@@ -58,7 +58,7 @@
     "    os.makedirs(root_dir)\n",
     "\n",
     "# argparser\n",
-    "use_parser = False\n",
+    "use_parser = True\n",
     "if use_parser:\n",
     "    parser = argparse.ArgumentParser(description='Determine the structure of the quantum model.')\n",
     "    parser.add_argument('--date_time', type=str, help='Date time in format Ymd_HMS')\n",
@@ -87,7 +87,7 @@
     "# global settings\n",
     "cf = {}\n",
     "cf[\"time\"]     = parse_args.date_time\n",
-    "cf[\"wandb\"]    = False # <-----------------------------------------------\n",
+    "cf[\"wandb\"]    = True # <-----------------------------------------------\n",
     "cf[\"project\"]  = \"g_eflow_QFCGNN\"\n",
     "\n",
     "# training configuration\n",
@@ -378,7 +378,7 @@
     "preprocess_mode = \"normalize\"\n",
     "gnn_layers      = parse_args.q_gnn_layers\n",
     "gnn_reupload    = parse_args.q_gnn_reupload\n",
-    "model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":5, \"gnn_layers\":1, \"gnn_reupload\":0}\n",
+    "model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":5, \"gnn_layers\":gnn_layers, \"gnn_reupload\":gnn_reupload}\n",
     "train_qfcgnn(preprocess_mode, model_dict)"
    ]
   }
