--- a/r_delete_run.ipynb
+++ b/r_delete_run.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import wandb\n",
     "\n",
     "api     = wandb.Api()\n",
-    "date    = \"20230823\"\n",
+    "date    = \"20230910\"\n",
     "suffix  = \"\"\n",
-    "project = \"g_vz_eflow_2pcgnn_slurm\"\n",
+    "project = \"g_eflow_QFCGNN\"\n",
     "\n",
     "for run in api.runs(f\"ntuyianchen/{project}\"):\n",
     "    if date in run.id and suffix in run.id:\n",
