20230912 test R=0.1~0.4 and add d_h5py_info

--- a/g_eflow_2pcgnn.ipynb
+++ b/g_eflow_2pcgnn.ipynb
@@ -58,7 +58,7 @@
     "    os.makedirs(root_dir)\n",
     "\n",
     "# argparser\n",
-    "use_parser = True\n",
+    "use_parser = False\n",
     "if use_parser:\n",
     "    parser = argparse.ArgumentParser(description='Determine the structure of the quantum model.')\n",
     "    parser.add_argument('--date_time', type=str, help='Date time in format Ymd_HMS')\n",
@@ -67,13 +67,14 @@
     "    parser.add_argument('--rnd_seed', type=int, help='Random seed')\n",
     "    parse_args = parser.parse_args()\n",
     "else:\n",
-    "    parse_fields = [\"date_time\", \"q_gnn_layers\", \"q_gnn_reupload\", \"rnd_seed\"]\n",
+    "    parse_fields = [\"date_time\", \"q_gnn_layers\", \"q_gnn_reupload\", \"q_gnn_num_qnn\", \"rnd_seed\"]\n",
     "    parse_tuple  = namedtuple('parse_tuple', \" \".join(parse_fields))\n",
     "    parse_args   = parse_tuple(\n",
     "        date_time      = time.strftime(\"%Y%m%d_%H%M%S\", time.localtime()),\n",
     "        rnd_seed       = 0,\n",
     "        q_gnn_layers   = 1,\n",
-    "        q_gnn_reupload = 0,\n",
+    "        q_gnn_reupload = 1,\n",
+    "        q_gnn_num_qnn  = 2,\n",
     "    )\n",
     "    "
    ]
@@ -97,7 +98,7 @@
     "cf[\"num_bin_data\"]      = 500 # <-----------------------------------------------\n",
     "cf[\"batch_size\"]        = 64 # <-----------------------------------------------\n",
     "cf[\"num_workers\"]       = 0\n",
-    "cf[\"max_epochs\"]        = 10 # <-----------------------------------------------\n",
+    "cf[\"max_epochs\"]        = 30 # <-----------------------------------------------\n",
     "cf[\"accelerator\"]       = \"cpu\"\n",
     "cf[\"fast_dev_run\"]      = False\n",
     "cf[\"log_every_n_steps\"] = cf[\"batch_size\"] // 2"
@@ -257,14 +258,17 @@
     "        super().__init__(phi, mlp)\n",
     "\n",
     "class QuantumFCGNN(nn.Module):\n",
-    "    def __init__(self, gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload, **kwargs):\n",
+    "    def __init__(self, gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload, gnn_num_qnn, **kwargs):\n",
     "        super().__init__()\n",
-    "        self.phi = m_nn.QuantumDisorderedRotFCGraph(num_idx_qubits=gnn_idx_qubits, num_nn_qubits=gnn_nn_qubits, num_layers=gnn_layers, num_reupload=gnn_reupload)\n",
-    "        self.mlp = m_nn.ClassicalMLP(in_channel=gnn_nn_qubits, out_channel=1, hidden_channel=0, num_layers=0)\n",
+    "        self.phi = nn.ModuleList([\n",
+    "            m_nn.QuantumDisorderedRotFCGraph(num_idx_qubits=gnn_idx_qubits, num_nn_qubits=gnn_nn_qubits, num_layers=gnn_layers, num_reupload=gnn_reupload) \\\n",
+    "                for _ in range(gnn_num_qnn)\n",
+    "                ])\n",
+    "        self.mlp = m_nn.ClassicalMLP(in_channel=gnn_num_qnn*gnn_nn_qubits, out_channel=1, hidden_channel=0, num_layers=0)\n",
     "    def forward(self, x):\n",
     "        # inputs should be 1-dim for each data, otherwise it would be confused with batch shape\n",
     "        x = torch.flatten(x, start_dim=-2, end_dim=-1)\n",
-    "        x = self.phi(x)\n",
+    "        x = torch.cat([self.phi[i](x) for i in range(len(self.phi))], dim=-1)\n",
     "        x = self.mlp(x)\n",
     "        return x"
    ]
@@ -335,7 +339,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_info = {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0.1, \"num_bin_data\":cf[\"num_bin_data\"]}\n",
+    "data_info = {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0.2, \"num_bin_data\":cf[\"num_bin_data\"]}\n",
     "sig_fatjet_events = d_mg5_data.FatJetEvents(channel=data_info[\"sig\"], cut_pt=data_info[\"cut\"], subjet_radius=data_info[\"subjet_radius\"])\n",
     "bkg_fatjet_events = d_mg5_data.FatJetEvents(channel=data_info[\"bkg\"], cut_pt=data_info[\"cut\"], subjet_radius=data_info[\"subjet_radius\"])\n",
     "\n",
@@ -360,26 +364,28 @@
     "    model       = QuantumFCGNN(**model_dict)\n",
     "    qidx, qnn   = model_dict['gnn_idx_qubits'], model_dict['gnn_nn_qubits']\n",
     "    gl, gr      = model_dict['gnn_layers'], model_dict['gnn_reupload']\n",
+    "    num_qnn     = model_dict['gnn_num_qnn']\n",
     "    train_info  = {\"rnd_seed\":cf[\"rnd_seed\"], \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode}\n",
-    "    train_info[\"group_rnd\"]  = f\"{model.__class__.__name__}_{preprocess_mode}_qidx{qidx}_qnn{qnn}_gl{gl}_gr{gr} | {data_suffix}\"\n",
+    "    train_info[\"group_rnd\"]  = f\"{model.__class__.__name__}_{preprocess_mode}_QNN{num_qnn}_qidx{qidx}_qnn{qnn}_gl{gl}_gr{gr} | {data_suffix}\"\n",
     "    train_info.update(model_dict)\n",
     "    train_info.update(data_info)\n",
     "    train(model, data_module, train_info, graph=False)\n",
     "\n",
-    "# # classical ML only\n",
-    "# for p_mode, go, gh, gl in product([\"normalize\"], [6], [6], [1,2]):\n",
-    "#     model_dict = {\"gnn_in\":6, \"gnn_out\":go, \"gnn_hidden\":gh, \"gnn_layers\":gl, \"mlp_hidden\":0, \"mlp_layers\":0}\n",
-    "#     train_classical(preprocess_mode=p_mode, model_dict=model_dict)\n",
+    "# classical ML only\n",
+    "for p_mode, go, gh, gl in product([\"normalize\"], [6], [6], [1,2]):\n",
+    "    model_dict = {\"gnn_in\":6, \"gnn_out\":go, \"gnn_hidden\":gh, \"gnn_layers\":gl, \"mlp_hidden\":0, \"mlp_layers\":0}\n",
+    "    train_classical(preprocess_mode=p_mode, model_dict=model_dict)\n",
     "\n",
-    "# Quantum Fully Connected Graph\n",
-    "gnn_idx_qubits  = int(np.ceil(np.log2(max(\n",
-    "    max(ak.count(sig_fatjet_events.events[\"fast_pt\"], axis=1)), \n",
-    "    max(ak.count(bkg_fatjet_events.events[\"fast_pt\"], axis=1))))))\n",
-    "preprocess_mode = \"normalize\"\n",
-    "gnn_layers      = parse_args.q_gnn_layers\n",
-    "gnn_reupload    = parse_args.q_gnn_reupload\n",
-    "model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":5, \"gnn_layers\":gnn_layers, \"gnn_reupload\":gnn_reupload}\n",
-    "train_qfcgnn(preprocess_mode, model_dict)"
+    "# # Quantum Fully Connected Graph\n",
+    "# gnn_idx_qubits  = int(np.ceil(np.log2(max(\n",
+    "#     max(ak.count(sig_fatjet_events.events[\"fast_pt\"], axis=1)), \n",
+    "#     max(ak.count(bkg_fatjet_events.events[\"fast_pt\"], axis=1))))))\n",
+    "# preprocess_mode = \"normalize\"\n",
+    "# gnn_layers      = parse_args.q_gnn_layers\n",
+    "# gnn_reupload    = parse_args.q_gnn_reupload\n",
+    "# gnn_num_qnn     = parse_args.q_gnn_num_qnn\n",
+    "# model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":3, \"gnn_layers\":gnn_layers, \"gnn_reupload\":gnn_reupload, \"gnn_num_qnn\":gnn_num_qnn}\n",
+    "# train_qfcgnn(preprocess_mode, model_dict)"
    ]
   }
  ],
