--- a/r_delete_run.ipynb
+++ b/r_delete_run.ipynb
@@ -2,21 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classical2PCGNN_normalize_go6_gh6_gl2_mh0_ml0 | VzToZhToVevebb_VzToQCD_cut(800, 1000)_bin10-500_R0.4 | 20230912_114632_0\n",
+      "Classical2PCGNN_normalize_go6_gh6_gl1_mh0_ml0 | VzToZhToVevebb_VzToQCD_cut(800, 1000)_bin10-500_R0.4 | 20230912_114632_0\n",
+      "Classical2PCGNN_normalize_go6_gh6_gl2_mh0_ml0 | VzToZhToVevebb_VzToQCD_cut(800, 1000)_bin10-500_R0.3 | 20230912_114632_0\n",
+      "Classical2PCGNN_normalize_go6_gh6_gl1_mh0_ml0 | VzToZhToVevebb_VzToQCD_cut(800, 1000)_bin10-500_R0.3 | 20230912_114632_0\n",
+      "Classical2PCGNN_normalize_go6_gh6_gl2_mh0_ml0 | VzToZhToVevebb_VzToQCD_cut(800, 1000)_bin10-500_R0.2 | 20230912_114632_0\n",
+      "Classical2PCGNN_normalize_go6_gh6_gl1_mh0_ml0 | VzToZhToVevebb_VzToQCD_cut(800, 1000)_bin10-500_R0.2 | 20230912_114632_0\n",
+      "Classical2PCGNN_normalize_go6_gh6_gl2_mh0_ml0 | VzToZhToVevebb_VzToQCD_cut(800, 1000)_bin10-500_R0.1 | 20230912_114632_0\n",
+      "Classical2PCGNN_normalize_go6_gh6_gl1_mh0_ml0 | VzToZhToVevebb_VzToQCD_cut(800, 1000)_bin10-500_R0.1 | 20230912_114632_0\n"
+     ]
+    }
+   ],
    "source": [
     "import wandb\n",
     "\n",
     "api     = wandb.Api()\n",
-    "date    = \"20230910\"\n",
+    "date    = \"20230912_114632\"\n",
     "suffix  = \"\"\n",
     "project = \"g_eflow_QFCGNN\"\n",
     "\n",
     "for run in api.runs(f\"ntuyianchen/{project}\"):\n",
     "    if date in run.id and suffix in run.id:\n",
     "        print(run.id)\n",
-    "        # run.delete()"
+    "        # run.delete()\n",
+    "    # elif run.id is None:\n",
+    "    #     print(run.id)"
    ]
   }
  ],
