20230913 fix delta_phi mod 2*pi bug

--- a/g_eflow_2pcgnn.ipynb
+++ b/g_eflow_2pcgnn.ipynb
@@ -72,9 +72,9 @@
     "    parse_args   = parse_tuple(\n",
     "        date_time      = time.strftime(\"%Y%m%d_%H%M%S\", time.localtime()),\n",
     "        rnd_seed       = 0,\n",
-    "        q_gnn_layers   = 1,\n",
+    "        q_gnn_layers   = 2,\n",
     "        q_gnn_reupload = 1,\n",
-    "        q_gnn_num_qnn  = 2,\n",
+    "        q_gnn_num_qnn  = 1,\n",
     "    )\n",
     "    "
    ]
@@ -87,7 +87,7 @@
    "source": [
     "# global settings\n",
     "cf = {}\n",
-    "cf[\"time\"]     = parse_args.date_time\n",
+    "cf[\"time\"]     = input(\"Type a date time or leave it space to use default date time: \") or parse_args.date_time\n",
     "cf[\"wandb\"]    = True # <-----------------------------------------------\n",
     "cf[\"project\"]  = \"g_eflow_QFCGNN\"\n",
     "\n",
@@ -144,11 +144,35 @@
     "            f1 = np.arctan(events[\"fast_pt\"] / events[\"fatjet_pt\"])\n",
     "            f2 = events[\"fast_delta_eta\"]\n",
     "            f3 = events[\"fast_delta_phi\"]\n",
+    "            arrays = ak.zip([f1, f2, f3])\n",
+    "        elif mode == \"normalize_pi\":\n",
+    "            fatjet_radius = 0.8\n",
+    "            f1 = np.arctan(events[\"fast_pt\"] / events[\"fatjet_pt\"])\n",
+    "            f2 = events[\"fast_delta_eta\"] / fatjet_radius * (np.pi/2)\n",
+    "            f3 = events[\"fast_delta_phi\"] / fatjet_radius * (np.pi/2)\n",
+    "            arrays = ak.zip([f1, f2, f3])\n",
+    "        elif mode == \"tri_eflow\":\n",
+    "            f1_s = np.sin(np.arctan(events[\"fast_pt\"] / events[\"fatjet_pt\"])/2)\n",
+    "            f1_c = np.cos(np.arctan(events[\"fast_pt\"] / events[\"fatjet_pt\"])/2)\n",
+    "            f2_s = np.sin(events[\"fast_delta_eta\"]/2)\n",
+    "            f2_c = np.cos(events[\"fast_delta_eta\"]/2)\n",
+    "            f3_s = np.sin(events[\"fast_delta_phi\"]/2)\n",
+    "            f3_c = np.cos(events[\"fast_delta_phi\"]/2)\n",
+    "            arrays = ak.zip([f1_s, f1_c, f2_s, f2_c, f3_s, f3_c])\n",
+    "        elif mode == \"tri_eflow_pi\":\n",
+    "            fatjet_radius = 0.8\n",
+    "            f1_s = np.sin(np.arctan(events[\"fast_pt\"] / events[\"fatjet_pt\"]) / 2)\n",
+    "            f1_c = np.cos(np.arctan(events[\"fast_pt\"] / events[\"fatjet_pt\"]) / 2)\n",
+    "            f2_s = np.sin((events[\"fast_delta_eta\"] / fatjet_radius * (np.pi/2)) / 2)\n",
+    "            f2_c = np.cos((events[\"fast_delta_eta\"] / fatjet_radius * (np.pi/2)) / 2)\n",
+    "            f3_s = np.sin((events[\"fast_delta_phi\"] / fatjet_radius * (np.pi/2)) / 2)\n",
+    "            f3_c = np.cos((events[\"fast_delta_phi\"] / fatjet_radius * (np.pi/2)) / 2)\n",
+    "            arrays = ak.zip([f1_s, f1_c, f2_s, f2_c, f3_s, f3_c])\n",
     "        elif mode == \"\":\n",
     "            f1 = events[\"fast_pt\"]\n",
     "            f2 = events[\"fast_delta_eta\"]\n",
     "            f3 = events[\"fast_delta_phi\"]\n",
-    "        arrays = ak.zip([f1, f2, f3])\n",
+    "            arrays = ak.zip([f1, f2, f3])\n",
     "        arrays = arrays.to_list()\n",
     "        events = [torch.tensor(arrays[i], dtype=torch.float32, requires_grad=False) for i in range(len(arrays))]\n",
     "        return events\n",
@@ -339,53 +363,60 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_info = {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0.2, \"num_bin_data\":cf[\"num_bin_data\"]}\n",
+    "data_info = {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0.2, \"num_bin_data\":cf[\"num_bin_data\"], \"num_ptcs_limit\":16}\n",
     "sig_fatjet_events = d_mg5_data.FatJetEvents(channel=data_info[\"sig\"], cut_pt=data_info[\"cut\"], subjet_radius=data_info[\"subjet_radius\"])\n",
     "bkg_fatjet_events = d_mg5_data.FatJetEvents(channel=data_info[\"bkg\"], cut_pt=data_info[\"cut\"], subjet_radius=data_info[\"subjet_radius\"])\n",
     "\n",
-    "L.seed_everything(cf[\"rnd_seed\"])\n",
-    "sig_events  = sig_fatjet_events.generate_uniform_pt_events(bin=data_info[\"bin\"], num_bin_data=data_info[\"num_bin_data\"])\n",
-    "bkg_events  = bkg_fatjet_events.generate_uniform_pt_events(bin=data_info[\"bin\"], num_bin_data=data_info[\"num_bin_data\"])\n",
-    "data_suffix = f\"{data_info['sig']}_{data_info['bkg']}_cut{data_info['cut']}_bin{data_info['bin']}-{data_info['num_bin_data']}_R{data_info['subjet_radius']}\"\n",
+    "for rnd_seed in range(1):\n",
+    "    cf[\"rnd_seed\"] = rnd_seed\n",
+    "    L.seed_everything(cf[\"rnd_seed\"])\n",
     "\n",
-    "def train_classical(preprocess_mode, model_dict):\n",
-    "    data_module = JetDataModule(sig_events, bkg_events, preprocess_mode)\n",
-    "    model       = Classical2PCGNN(**model_dict)\n",
-    "    go, gh, gl  = model_dict['gnn_out'], model_dict['gnn_hidden'], model_dict['gnn_layers']\n",
-    "    mh, ml      = model_dict['mlp_hidden'], model_dict['mlp_layers']\n",
-    "    train_info  = {\"rnd_seed\":cf[\"rnd_seed\"], \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode}\n",
-    "    train_info[\"group_rnd\"] = f\"{model.__class__.__name__}_{preprocess_mode}_go{go}_gh{gh}_gl{gl}_mh{mh}_ml{ml} | {data_suffix}\"\n",
-    "    train_info.update(model_dict)\n",
-    "    train_info.update(data_info)\n",
-    "    train(model, data_module, train_info)\n",
+    "    sig_events  = sig_fatjet_events.generate_uniform_pt_events(bin=data_info[\"bin\"], num_bin_data=data_info[\"num_bin_data\"], num_ptcs_limit=data_info[\"num_ptcs_limit\"])\n",
+    "    bkg_events  = bkg_fatjet_events.generate_uniform_pt_events(bin=data_info[\"bin\"], num_bin_data=data_info[\"num_bin_data\"], num_ptcs_limit=data_info[\"num_ptcs_limit\"])\n",
+    "    data_suffix = f\"{data_info['sig']}_{data_info['bkg']}_cut{data_info['cut']}_bin{data_info['bin']}-{data_info['num_bin_data']}_R{data_info['subjet_radius']}\"\n",
     "\n",
-    "def train_qfcgnn(preprocess_mode, model_dict):\n",
-    "    data_module = JetDataModule(sig_events, bkg_events, preprocess_mode, graph=False)\n",
-    "    model       = QuantumFCGNN(**model_dict)\n",
-    "    qidx, qnn   = model_dict['gnn_idx_qubits'], model_dict['gnn_nn_qubits']\n",
-    "    gl, gr      = model_dict['gnn_layers'], model_dict['gnn_reupload']\n",
-    "    num_qnn     = model_dict['gnn_num_qnn']\n",
-    "    train_info  = {\"rnd_seed\":cf[\"rnd_seed\"], \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode}\n",
-    "    train_info[\"group_rnd\"]  = f\"{model.__class__.__name__}_{preprocess_mode}_QNN{num_qnn}_qidx{qidx}_qnn{qnn}_gl{gl}_gr{gr} | {data_suffix}\"\n",
-    "    train_info.update(model_dict)\n",
-    "    train_info.update(data_info)\n",
-    "    train(model, data_module, train_info, graph=False)\n",
+    "    def train_classical(preprocess_mode, model_dict):\n",
+    "        data_module = JetDataModule(sig_events, bkg_events, preprocess_mode)\n",
+    "        model       = Classical2PCGNN(**model_dict)\n",
+    "        go, gh, gl  = model_dict['gnn_out'], model_dict['gnn_hidden'], model_dict['gnn_layers']\n",
+    "        mh, ml      = model_dict['mlp_hidden'], model_dict['mlp_layers']\n",
+    "        train_info  = {\"rnd_seed\":cf[\"rnd_seed\"], \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode}\n",
+    "        train_info[\"group_rnd\"] = f\"{model.__class__.__name__}_{preprocess_mode}_go{go}_gh{gh}_gl{gl}_mh{mh}_ml{ml} | {data_suffix}\"\n",
+    "        train_info.update(model_dict)\n",
+    "        train_info.update(data_info)\n",
+    "        train(model, data_module, train_info)\n",
     "\n",
-    "# classical ML only\n",
-    "for p_mode, go, gh, gl in product([\"normalize\"], [6], [6], [1,2]):\n",
-    "    model_dict = {\"gnn_in\":6, \"gnn_out\":go, \"gnn_hidden\":gh, \"gnn_layers\":gl, \"mlp_hidden\":0, \"mlp_layers\":0}\n",
-    "    train_classical(preprocess_mode=p_mode, model_dict=model_dict)\n",
+    "    def train_qfcgnn(preprocess_mode, model_dict):\n",
+    "        data_module = JetDataModule(sig_events, bkg_events, preprocess_mode, graph=False)\n",
+    "        model       = QuantumFCGNN(**model_dict)\n",
+    "        qidx, qnn   = model_dict['gnn_idx_qubits'], model_dict['gnn_nn_qubits']\n",
+    "        gl, gr      = model_dict['gnn_layers'], model_dict['gnn_reupload']\n",
+    "        num_qnn     = model_dict['gnn_num_qnn']\n",
+    "        train_info  = {\"rnd_seed\":cf[\"rnd_seed\"], \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode}\n",
+    "        train_info[\"group_rnd\"]  = f\"{model.__class__.__name__}_{preprocess_mode}_QNN{num_qnn}_qidx{qidx}_qnn{qnn}_gl{gl}_gr{gr} | {data_suffix}\"\n",
+    "        train_info.update(model_dict)\n",
+    "        train_info.update(data_info)\n",
+    "        train(model, data_module, train_info, graph=False)\n",
     "\n",
-    "# # Quantum Fully Connected Graph\n",
-    "# gnn_idx_qubits  = int(np.ceil(np.log2(max(\n",
-    "#     max(ak.count(sig_fatjet_events.events[\"fast_pt\"], axis=1)), \n",
-    "#     max(ak.count(bkg_fatjet_events.events[\"fast_pt\"], axis=1))))))\n",
-    "# preprocess_mode = \"normalize\"\n",
-    "# gnn_layers      = parse_args.q_gnn_layers\n",
-    "# gnn_reupload    = parse_args.q_gnn_reupload\n",
-    "# gnn_num_qnn     = parse_args.q_gnn_num_qnn\n",
-    "# model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":3, \"gnn_layers\":gnn_layers, \"gnn_reupload\":gnn_reupload, \"gnn_num_qnn\":gnn_num_qnn}\n",
-    "# train_qfcgnn(preprocess_mode, model_dict)"
+    "    # # classical ML only\n",
+    "    # for p_mode, go, gh, gl in product([\"\", \"normalize\", \"normalize_pi\", \"tri_eflow\"], [6], [6], [0,1,2]):\n",
+    "    #     if p_mode in [\"\", \"normalize\", \"normalize_pi\"]:\n",
+    "    #         gnn_in = 6\n",
+    "    #     elif p_mode in [\"tri_eflow\"]:\n",
+    "    #         gnn_in = 12\n",
+    "    #     model_dict = {\"gnn_in\":gnn_in, \"gnn_out\":go, \"gnn_hidden\":gh, \"gnn_layers\":gl, \"mlp_hidden\":0, \"mlp_layers\":0}\n",
+    "    #     train_classical(preprocess_mode=p_mode, model_dict=model_dict)\n",
+    "\n",
+    "    # Quantum Fully Connected Graph\n",
+    "    gnn_idx_qubits  = int(np.ceil(np.log2(max(\n",
+    "        max(ak.count(sig_events[\"fast_pt\"], axis=1)), \n",
+    "        max(ak.count(bkg_events[\"fast_pt\"], axis=1))))))\n",
+    "    preprocess_mode = \"normalize_pi\"\n",
+    "    gnn_layers      = parse_args.q_gnn_layers\n",
+    "    gnn_reupload    = parse_args.q_gnn_reupload\n",
+    "    gnn_num_qnn     = parse_args.q_gnn_num_qnn\n",
+    "    model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":3, \"gnn_layers\":gnn_layers, \"gnn_reupload\":gnn_reupload, \"gnn_num_qnn\":gnn_num_qnn}\n",
+    "    train_qfcgnn(preprocess_mode, model_dict)"
    ]
   }
  ],
