20230915 Add arbitrary ctrl enc

--- a/g_eflow_2pcgnn.ipynb
+++ b/g_eflow_2pcgnn.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Packages and Configurations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -73,10 +80,9 @@
     "        date_time      = time.strftime(\"%Y%m%d_%H%M%S\", time.localtime()),\n",
     "        rnd_seed       = 0,\n",
     "        q_gnn_layers   = 2,\n",
-    "        q_gnn_reupload = 1,\n",
+    "        q_gnn_reupload = 0,\n",
     "        q_gnn_num_qnn  = 1,\n",
-    "    )\n",
-    "    "
+    "    )"
    ]
   },
   {
@@ -102,6 +108,13 @@
     "cf[\"accelerator\"]       = \"cpu\"\n",
     "cf[\"fast_dev_run\"]      = False\n",
     "cf[\"log_every_n_steps\"] = cf[\"batch_size\"] // 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data"
    ]
   },
   {
@@ -211,6 +224,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Classical GNN Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -236,7 +256,20 @@
     "        x = self.gnn(x, edge_index)\n",
     "        x = geom_nn.global_add_pool(x, batch)\n",
     "        x = self.mlp(x)\n",
-    "        return x"
+    "        return x\n",
+    "    \n",
+    "class Classical2PCGNN(Graph2PCGNN):\n",
+    "    def __init__(self, gnn_in, gnn_out, gnn_hidden, gnn_layers, mlp_hidden=0, mlp_layers=0, **kwargs):\n",
+    "        phi = m_nn.ClassicalMLP(in_channel=gnn_in, out_channel=gnn_out, hidden_channel=gnn_hidden, num_layers=gnn_layers)\n",
+    "        mlp = m_nn.ClassicalMLP(in_channel=gnn_out, out_channel=1, hidden_channel=mlp_hidden, num_layers=mlp_layers)\n",
+    "        super().__init__(phi, mlp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Quantum Fully Connected GNN Model"
    ]
   },
   {
@@ -245,48 +278,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Classical2PCGNN(Graph2PCGNN):\n",
-    "    def __init__(self, gnn_in, gnn_out, gnn_hidden, gnn_layers, mlp_hidden=0, mlp_layers=0, **kwargs):\n",
-    "        phi = m_nn.ClassicalMLP(in_channel=gnn_in, out_channel=gnn_out, hidden_channel=gnn_hidden, num_layers=gnn_layers)\n",
-    "        mlp = m_nn.ClassicalMLP(in_channel=gnn_out, out_channel=1, hidden_channel=mlp_hidden, num_layers=mlp_layers)\n",
-    "        super().__init__(phi, mlp)\n",
-    "\n",
-    "class QuantumAngle2PCGNN(Graph2PCGNN):\n",
-    "    def __init__(self, gnn_qubits, gnn_layers, gnn_reupload, gnn_measurements, **kwargs):\n",
-    "        phi = m_nn.QuantumMLP(num_qubits=gnn_qubits, num_layers=gnn_layers, num_reupload=gnn_reupload, measurements=gnn_measurements)\n",
-    "        mlp = m_nn.ClassicalMLP(in_channel=len(gnn_measurements), out_channel=1, hidden_channel=0, num_layers=0)\n",
-    "        super().__init__(phi, mlp)\n",
-    "\n",
-    "class QuantumElementwiseAngle2PCGNN(Graph2PCGNN):\n",
-    "    def __init__(self, gnn_qubits, gnn_layers, gnn_reupload, gnn_measurements, **kwargs):\n",
-    "        phi = nn.Sequential(\n",
-    "            m_nn.ElementwiseLinear(in_channel=gnn_qubits),\n",
-    "            m_nn.QuantumMLP(num_qubits=gnn_qubits, num_layers=gnn_layers, num_reupload=gnn_reupload, measurements=gnn_measurements),\n",
-    "            )\n",
-    "        mlp = m_nn.ClassicalMLP(in_channel=len(gnn_measurements), out_channel=1, hidden_channel=0, num_layers=0)\n",
-    "        super().__init__(phi, mlp)\n",
-    "\n",
-    "class QuantumIQP2PCGNN(Graph2PCGNN):\n",
-    "    def __init__(self, gnn_qubits, gnn_layers, gnn_reupload, gnn_measurements, **kwargs):\n",
-    "        phi = m_nn.QuantumSphericalIQP(num_qubits=gnn_qubits, num_layers=gnn_layers, num_reupload=gnn_reupload, measurements=gnn_measurements)\n",
-    "        mlp = m_nn.ClassicalMLP(in_channel=len(gnn_measurements), out_channel=1, hidden_channel=0, num_layers=0)\n",
-    "        super().__init__(phi, mlp)\n",
-    "\n",
-    "class QuantumElementwiseIQP2PCGNN(Graph2PCGNN):\n",
-    "    def __init__(self, gnn_qubits, gnn_layers, gnn_reupload, gnn_measurements, **kwargs):\n",
-    "        phi = nn.Sequential(\n",
-    "            m_nn.ElementwiseLinear(in_channel=gnn_qubits),\n",
-    "            m_nn.QuantumSphericalIQP(num_qubits=gnn_qubits, num_layers=gnn_layers, num_reupload=gnn_reupload, measurements=gnn_measurements),\n",
-    "            )\n",
-    "        mlp = m_nn.ClassicalMLP(in_channel=len(gnn_measurements), out_channel=1, hidden_channel=0, num_layers=0)\n",
-    "        super().__init__(phi, mlp)\n",
-    "\n",
     "class QuantumFCGNN(nn.Module):\n",
-    "    def __init__(self, gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload, gnn_num_qnn, **kwargs):\n",
+    "    def __init__(self, gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload, gnn_num_qnn, ctrl_enc_operator, **kwargs):\n",
     "        super().__init__()\n",
     "        self.phi = nn.ModuleList([\n",
-    "            m_nn.QuantumDisorderedRotFCGraph(num_idx_qubits=gnn_idx_qubits, num_nn_qubits=gnn_nn_qubits, num_layers=gnn_layers, num_reupload=gnn_reupload) \\\n",
-    "                for _ in range(gnn_num_qnn)\n",
+    "            m_nn.QuantumDisorderedFCGraph(\n",
+    "                num_idx_qubits    = gnn_idx_qubits, \n",
+    "                num_nn_qubits     = gnn_nn_qubits, \n",
+    "                num_layers        = gnn_layers, \n",
+    "                num_reupload      = gnn_reupload,\n",
+    "                ctrl_enc_operator = ctrl_enc_operator,\n",
+    "                ) for _ in range(gnn_num_qnn)\n",
     "                ])\n",
     "        self.mlp = m_nn.ClassicalMLP(in_channel=gnn_num_qnn*gnn_nn_qubits, out_channel=1, hidden_channel=0, num_layers=0)\n",
     "    def forward(self, x):\n",
@@ -294,7 +296,35 @@
     "        x = torch.flatten(x, start_dim=-2, end_dim=-1)\n",
     "        x = torch.cat([self.phi[i](x) for i in range(len(self.phi))], dim=-1)\n",
     "        x = self.mlp(x)\n",
-    "        return x"
+    "        return x\n",
+    "    \n",
+    "class QuantumRyFCGNN(QuantumFCGNN):\n",
+    "    def __init__(self, gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload, gnn_num_qnn, **kwargs):\n",
+    "        def ctrl_enc_operator(_input, control, control_values):\n",
+    "            ctrl = qml.ctrl(qml.AngleEmbedding, control=control, control_values=control_values)\n",
+    "            ctrl(features=_input, wires=range(gnn_idx_qubits, gnn_idx_qubits+3), rotation=\"Y\")\n",
+    "        super().__init__(gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload, gnn_num_qnn, ctrl_enc_operator, **kwargs)\n",
+    "    \n",
+    "class QuantumRotFCGNN(QuantumFCGNN):\n",
+    "    def __init__(self, gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload, gnn_num_qnn, **kwargs):\n",
+    "        def ctrl_enc_operator(_input, control, control_values):\n",
+    "            ctrl = qml.ctrl(qml.Rot, control=control, control_values=control_values)\n",
+    "            ctrl(*_input, wires=gnn_idx_qubits)\n",
+    "        super().__init__(gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload, gnn_num_qnn, ctrl_enc_operator, **kwargs)\n",
+    "    \n",
+    "# class QuantumAmpFCGNN(QuantumFCGNN):\n",
+    "#     def __init__(self, gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload, gnn_num_qnn, **kwargs):\n",
+    "#         def ctrl_enc_operator(_input, control, control_values):\n",
+    "#             ctrl = qml.ctrl(qml.AmplitudeEmbedding, control=control, control_values=control_values)\n",
+    "#             ctrl(features=_input, wires=range(gnn_idx_qubits, gnn_idx_qubits+2), pad_with=np.pi/2, normalize=True)\n",
+    "#         super().__init__(gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload, gnn_num_qnn, ctrl_enc_operator, **kwargs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Wandb Training"
    ]
   },
   {
@@ -358,6 +388,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -386,9 +423,9 @@
     "        train_info.update(data_info)\n",
     "        train(model, data_module, train_info)\n",
     "\n",
-    "    def train_qfcgnn(preprocess_mode, model_dict):\n",
+    "    def train_qfcgnn(preprocess_mode, model_class, model_dict):\n",
     "        data_module = JetDataModule(sig_events, bkg_events, preprocess_mode, graph=False)\n",
-    "        model       = QuantumFCGNN(**model_dict)\n",
+    "        model       = model_class(**model_dict)\n",
     "        qidx, qnn   = model_dict['gnn_idx_qubits'], model_dict['gnn_nn_qubits']\n",
     "        gl, gr      = model_dict['gnn_layers'], model_dict['gnn_reupload']\n",
     "        num_qnn     = model_dict['gnn_num_qnn']\n",
@@ -408,6 +445,7 @@
     "    #     train_classical(preprocess_mode=p_mode, model_dict=model_dict)\n",
     "\n",
     "    # Quantum Fully Connected Graph\n",
+    "    model_class     = QuantumRotFCGNN\n",
     "    gnn_idx_qubits  = int(np.ceil(np.log2(max(\n",
     "        max(ak.count(sig_events[\"fast_pt\"], axis=1)), \n",
     "        max(ak.count(bkg_events[\"fast_pt\"], axis=1))))))\n",
@@ -415,8 +453,8 @@
     "    gnn_layers      = parse_args.q_gnn_layers\n",
     "    gnn_reupload    = parse_args.q_gnn_reupload\n",
     "    gnn_num_qnn     = parse_args.q_gnn_num_qnn\n",
-    "    model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":3, \"gnn_layers\":gnn_layers, \"gnn_reupload\":gnn_reupload, \"gnn_num_qnn\":gnn_num_qnn}\n",
-    "    train_qfcgnn(preprocess_mode, model_dict)"
+    "    model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":6, \"gnn_layers\":gnn_layers, \"gnn_reupload\":gnn_reupload, \"gnn_num_qnn\":gnn_num_qnn}\n",
+    "    train_qfcgnn(preprocess_mode, model_class, model_dict)"
    ]
   }
  ],
