--- a/r_delete_run.ipynb
+++ b/r_delete_run.ipynb
@@ -2,21 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Classical2PCGNN_normalize_go6_gh6_gl2_mh0_ml0 | VzToZhToVevebb_VzToQCD_cut(800, 1000)_bin10-500_R0.4 | 20230912_114632_0\n",
-      "Classical2PCGNN_normalize_go6_gh6_gl1_mh0_ml0 | VzToZhToVevebb_VzToQCD_cut(800, 1000)_bin10-500_R0.4 | 20230912_114632_0\n",
-      "Classical2PCGNN_normalize_go6_gh6_gl2_mh0_ml0 | VzToZhToVevebb_VzToQCD_cut(800, 1000)_bin10-500_R0.3 | 20230912_114632_0\n",
-      "Classical2PCGNN_normalize_go6_gh6_gl1_mh0_ml0 | VzToZhToVevebb_VzToQCD_cut(800, 1000)_bin10-500_R0.3 | 20230912_114632_0\n",
-      "Classical2PCGNN_normalize_go6_gh6_gl2_mh0_ml0 | VzToZhToVevebb_VzToQCD_cut(800, 1000)_bin10-500_R0.2 | 20230912_114632_0\n",
-      "Classical2PCGNN_normalize_go6_gh6_gl1_mh0_ml0 | VzToZhToVevebb_VzToQCD_cut(800, 1000)_bin10-500_R0.2 | 20230912_114632_0\n",
-      "Classical2PCGNN_normalize_go6_gh6_gl2_mh0_ml0 | VzToZhToVevebb_VzToQCD_cut(800, 1000)_bin10-500_R0.1 | 20230912_114632_0\n",
-      "Classical2PCGNN_normalize_go6_gh6_gl1_mh0_ml0 | VzToZhToVevebb_VzToQCD_cut(800, 1000)_bin10-500_R0.1 | 20230912_114632_0\n"
+      "QuantumRotFCGNN_normalize_pi_QNN1_qidx4_qnn1_gl2_gr1 | VzToZhToVevebb_VzToQCD_cut(800, 1000)_bin10-500_R0.2 | 20230915_094708_0\n"
      ]
     }
    ],
@@ -24,14 +17,14 @@
     "import wandb\n",
     "\n",
     "api     = wandb.Api()\n",
-    "date    = \"20230912_114632\"\n",
+    "date    = \"20230915_\"\n",
     "suffix  = \"\"\n",
     "project = \"g_eflow_QFCGNN\"\n",
     "\n",
     "for run in api.runs(f\"ntuyianchen/{project}\"):\n",
     "    if date in run.id and suffix in run.id:\n",
     "        print(run.id)\n",
-    "        # run.delete()\n",
+    "        run.delete()\n",
     "    # elif run.id is None:\n",
     "    #     print(run.id)"
    ]
